--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	        "name": "Joshua Marshall Moore",
 		"email": "joshua.marshall.moore@gmail.com"
 	},
-	"files": ["src/ubigraph.coffee", "README", "ubigraph.js"],
+	"files": ["README", "ubigraph.js"],
 	"main": "ubigraph.js",
 	"repository": {
 	        "type": "git",
